--- a/MainBody/intro.tex
+++ b/MainBody/intro.tex
@@ -3,6 +3,8 @@
 \section{Aims and Goals}
 This project aims to develop a method of conveying visual information without the user of the system requiring a functional visual system. The study investigates both navigational and semantic modes of operation, and the different techniques associated with each implementation.
 
+The system should be cheaper than current solutions (such as guide-dogs), and be more effective than 
+
 The goal of the project is to provide a functional system, able to be used to effectivley navigate around a room and avoid obstacles without the use of eyes.  
 
 \section{Intended Audience}
@@ -37,7 +39,7 @@ I took a parallel approach while researching my solution to the problem. Rather 
 \section{Assumptions}
 Several assumptions have been made during the development of the software.
 
-Firstly, it is assumed that the system will be used indoors. The Asus XTION Pro Live camera~\cite{xtion} camera chosen for use in the project uses \ac{IR} laser light to measure distance. In direct sunlight, the \ac{IR} radiation emmitted by the sun over-powers the \ac{IR} light emitted by the XTION, resulting in in-accurate readings. This is a limitation of a majority of \ac{RGB-D} cameras using structured light or Time-of-flight, although future work could involve the use of a stereoscopic camera setup as a solution to the problem.
+Firstly, it is assumed that the system will be used indoors. The Asus Xtion Pro Live camera~\cite{xtion} camera chosen for use in the project uses \ac{IR} laser light to measure distance. In direct sunlight, the \ac{IR} radiation emmitted by the sun over-powers the \ac{IR} light emitted by the Xtion, resulting in in-accurate readings. This is a limitation of a majority of \ac{RGB-D} cameras using structured light or Time-of-flight, although future work could involve the use of a stereoscopic camera setup as a solution to the problem.
 
 Secondly, as the systems described in this report convey information in the form of audio, it is assumed that the user of the system has a functional auditory system. Insert statistics here about deafblind if possible - if not, extrapolate based on percentage of blind and percentage of deaf.
 
