--- a/main.tex
+++ b/main.tex
@@ -12,6 +12,7 @@
 \usepackage[numbered,framed]{matlab-prettifier}
 \usepackage[printonlyused]{acronym}
 \usepackage{gensymb}
+\usepackage{minted}
 
 \usepackage[
 breaklinks=true,colorlinks=true,
@@ -128,8 +129,6 @@ May 2015
 \chapter{Background}
 \input{MainBody/background.tex}
 
-\chapter{Specification}
-\input{MainBody/specification.tex}
 \chapter{Implementation}
 \input{MainBody/implementation.tex}
 \clearpage
