--- a/references.bib
+++ b/references.bib
@@ -6,6 +6,14 @@
   urldate = {2015-04-06}
 }
 
+@online{magicwandmatlab,
+  author = {Son Lam Phung},
+  title = {Simulating Photoshop's magic wand tool},
+  year = 2004,
+  url = {http://www.mathworks.com/matlabcentral/fileexchange/4698-simulating-photoshops-magic-wand-tool/content/magicwand.m},
+  urldate = {2015-04-27}
+}
+
 @online{matlabwrapper,
     title = {Matlab Wrapper for OpenNI 2.2},
     author = {Camillo Taylor},
