--- a/MainBody/proposed-solution.tex
+++ b/MainBody/proposed-solution.tex
@@ -1,10 +1,9 @@
-\section{Requirements}
 An ideal sensory substitution system should convey as much \textbf{relevant} information to the user as possible. Bearing in mind the limited bit-rate of the human auditory system (as mentioned in section \ref{sec:compression}), it was decided that the system should have two modes of operation: a navigation mode, and a detail mode
 
-\subsection{Navigation Mode}
+\section{Navigation Mode}
 The navigational component of the system is responsible for conveying relevant information about the users surroundings for use when navigating. The use-case for this mode is similar to the use-case for a white cane.
 
 The system should address some of the issues found with the cane --- for instance, effective range should be greater than the two paces that a cane provides~\cite{mobilityenhancement}. Additionally, the system should not, as is the case with a cane, be limited to detecting obstacles on the floor --- the field-of-view of the system should be as large as possible.
 
-\subsection{Detail Mode}
-The "detail mode" of the system should convey detail about a specific object to the user of the system, rather than giving them a general overview of their environment. As much details a possible should be conveyed --- the exact amount of information should be determined experimentally.
+\section{Detail Mode}
+The ``detail mode'' of the system should convey detail about a specific object to the user of the system, rather than giving them a general overview of their environment. As much details a possible should be conveyed --- the exact amount of information should be determined experimentally.
