--- a/references.bib
+++ b/references.bib
@@ -6,6 +6,25 @@
   urldate = {2015-04-06}
 }
 
+@online{primesense-irstream,
+    author = {Anand Muglikar},
+    title = {Accessing IR Video Stream from PrimeSense 3D Sensor using OpenNI and OpenCV},
+    url = {http://stomatobot.com/primesense-3dsensor-ir-stream/},
+    year = {2013},
+    urldate = {2015-04-28}
+}
+
+@article{park2013aging,
+  title={The aging mind: neuroplasticity in response to cognitive training},
+  author={Park, Denise C and Bischof, G{\'e}rard N},
+  journal={Dialogues in clinical neuroscience},
+  volume={15},
+  number={1},
+  pages={109},
+  year={2013},
+  publisher={Les Laboratoires Servier}
+}
+
 @online{magicwandmatlab,
   author = {Son Lam Phung},
   title = {Simulating Photoshop's magic wand tool},
