--- a/MainBody/background.tex
+++ b/MainBody/background.tex
@@ -1,13 +1,13 @@
 \section{Problem Context}
 \subsection{UK Statistics}
-In the UK alone, around 2,000,000 people live with sight loss --- around 360,000 of which are registered with their local authority as being blind or visually impaired, who have severe and irreversible sight loss~/cite{uk-blind}.  Of these 360,000 people, there are only 17,000 white cane-users, and less than 4,800~\cite{guidedog-count} guide-dog owners. Assuming no overlap between guide dog users and white cane users, this leaves almost 94\% without access to the two major forms of assistance available to the blind.
+In the UK alone, around 2,000,000 people live with sight loss --- around 360,000 of which are registered with their local authority as being blind or visually impaired, who have severe and irreversible sight loss~\cite{uk-blind}.  Of these 360,000 people, there are only 17,000 white cane-users, and less than 4,800~\cite{guidedog-count} guide-dog owners. Assuming no overlap between guide dog users and white cane users, this leaves almost 94\% without access to the two major forms of assistance available to the blind.
 
-A possible factor that could explain the relatively small adoption of Guide Dogs is their cost --- as mentioned in the introductory section, the life-time cost of a guide dog is around £50,000. Although the dog is paid for in it's entirety by the Guide Dogs for the Blind association, they themselves are a charity and do not receive government funding. A system whereby the visually impaired could purchase a guide-dog would likely not be effective, as 66\% of the registered blind/partially sighted are not in paid employment~\cite{afbff} so would be unlikely to be able to afford the cost.
+A possible factor that could explain the relatively small adoption of Guide Dogs is their cost --- as mentioned in section \ref{chap:introduction}, the life-time cost of a guide dog is around \pounds50,000. Although the dog is paid for in it's entirety by the Guide Dogs for the Blind association, they themselves are a charity and do not receive government funding. A system whereby the visually impaired could purchase a guide-dog would likely not be effective, as 66\% of the registered blind/partially sighted are not in paid employment~\cite{afbff} so would be unlikely to be able to afford the cost.
 
 \subsection{Developing Countries}
-The situation in less developed countries than the UK is far worse. According to the Himalayan Cataract Project~\cite{worldblindness}, ``blindness is most prevalent in developing countries where malnutrition, inadequate health and education services, poor water quality and a lack of sanitation leads to a high incidence of eye disease''. If these countries are so impoverished that they are unable to afford services that are considered basic human rights in the developed world, it is unlikely that they will be able to afford to spend £50,000 per person on guide dogs. 
+The situation in less developed countries than the UK is far worse. According to the Himalayan Cataract Project~\cite{worldblindness}, ``blindness is most prevalent in developing countries where malnutrition, inadequate health and education services, poor water quality and a lack of sanitation leads to a high incidence of eye disease''. If these countries are so impoverished that they are unable to afford services that are considered basic human rights in the developed world, it is unlikely that they will be able to afford to spend \pounds50,000 per person on guide dogs. 
 
-Although white canes are a cheaper, they are not without their downsides. They have limited range - typically a few feet in-front of the user. This makes finding doorways etc a more difficult task than when using a guide-dog. 
+Although white canes are a cheaper, they are not without their downsides. They have limited range - typically a few feet in-front of the user. This makes finding doorways etc a more difficult task than when using a guide-dog.
 
 \section{The Problem}
 This project aims to address the lack of a cheap, intuitive way of enhancing the mobility of the visually impaired.
@@ -22,7 +22,15 @@ Evidence makes it clear that the human visual system has a higher bit-rate than 
 
 Taking this into consideration, it is clear that a working solution to the problem that this project aims to solve will involve compression of the visual information. 
 
+\subsection{Neuroplasticity}
+Neuroplasticity is a term used to describe the ability of the brain to adapt to change. The brain is able to ``re-wire'' itself in response to changes to input, environment and emotions --- however, this process takes time, and deteriorates with age\cite{park2013aging}. Some existing solutions (see section \ref{sec:existing})
+
+\ac{WHO} figures state that of the 39 million blind on planet, 82\% of those are aged 50 and above,
+
+With this in mind, an inclusive, wide-reaching system should be as intuitive and natural as possible, and should not be too heavily reliant on neuroplasticity.
+
 \section{Existing Solutions}
+\label{sec:exisiting}
 Several attempts to solve the problem of video to audio conversion have been made in the past.
 
 \subsection{vOICe}
@@ -72,62 +80,4 @@ This paper describes a technique whereby points are assigned to ``receptive fiel
 \subsection{EyeMusic}
 \subsection{PSVA}
 
-\subsection{Summary of existing works}
-
-\section{Proposed Solution}
-MOVE TO ITS OWN CHAPTER
-An ideal sensory substitution system should convey as much \textbf{relevant} information to the user as possible. Bearing in mind the limited bit-rate of the human auditory system (as mentioned in section \ref{sec:compression}), it was decided that the system should have two modes of operation: a navigation mode, and a detail mode
-
-\subsection{Navigation Mode}
-The navigational component of the system is responsible for conveying relevant information about the users surroundings for use when navigating. The use-case for this mode is similar to the use-case for a white cane.
-
-The system should address some of the issues found with the cane --- for instance, effective range should be greater than the two paces that a cane provides~\cite{mobilityenhancement}. Additionally, the system should not, as is the case with a cane, be limited to detecting obstacles on the floor --- the field-of-view of the system should be as large as possible.
-
-\subsection{Detail Mode}
-The ``detail mode'' of the system should convey detail about a specific object to the user of the system, rather than giving them a general overview of their environment. As much details a possible should be conveyed --- the exact amount of information should be determined experimentally.
-
-\section{Methods and Tools}
-MOVE THIS TO IMPLEMENTATION
-
-\subsection{Hardware}
-The use of a depth-sensing camera has multiple advantages in the context of this project.
-
-For navigational assistance, it is crucial to be able to know how far away obstacle are, so we are able to warn them that something is blocking their path.
-
-It is also important when conveying the shape or structure of an object to a user. To extract an individual object from an image, we need to know the object boundaries. In a high contrast scenario --- for instance, a red object on a yellow background, this is possible using only image data. However, in a lower-contrast situation, for instance a gray object on a black background, this can be more difficult. This report details a method that allows depth information to be combined with image data, demonstrating improvements over image/depth segmentation alone. 
-
-\subsection{Structured Light}
-The Xtion~\cite{xtion} device used in this project uses a technique involving structured light in order to compute the depth-map of a scene.
-
-The Xtion projects a known pattern of structured \ac{IR} laser light onto the scene, and using an \ac{IR} camera, receives the location and shape of each \ac{IR} point. The camera does not use a lens like those found on normal, visible-light cameras --- it has what's known as an astigmatic lens. An astigmatic lens has a focal-length along the X-axis that differs to that along the Y-axis. For instance, if the projected pattern consisted of many circular points, due to astigmatism in the lens, the image read back by the infra-red camera would consist of many elliptical points, varying in eccentricity according to distance between the point and the projector.
-
-Using the change in eccentricity for each point, the device is able to construct a depth-map of the scene in real-time.
-
-This sensor was developed by a company called Primesense, and is quite well supported --- drivers are available for all major platforms. The Xtion is also supported by OpenNI, a framework used to develop software for ``Natural Interaction'' devices. 
-
-\subsection{Other Techniques}
-Use of structured light is not the old technique that has been developed to acquire depth-maps - other methods exist, for instance, Time-of-Flight and Stereoscopic systems. The Asus Xtion was chosen over other devices, as it is fairly in-expensive (\~£100), and can be powered by USB alone (other devices, such as the Microsoft Kinect, require mains power to operate). 
-
-\subsection{Software}
-A majority of the development work done over the course of this project has been in Matlab, although Java and C++ have also been used.
-
-\subsubsection{Matlab}
-It was decided that Matlab was the right tool for the job for several reasons.
-
-Firstly, Matlab has a lot of relevant functionality ``baked-in'' - for instance, an \ac{FFT} can be performed on a vector in one line: \lstinline$fft(vector)$, with no additional libraries required. This is not the case with many other languages. This makes prototyping much quicker, as it is not necessary to totally re-invent the wheel when trying new ideas.
-
-Wrappers for OpenNI are available for Matlab, making interaction with the Xtion camera - the wrapper is open-source, so any modifications can be made quite easily.
-
-Another major factor in choosing Matlab over another language is the amount of support available, both physically from my Project Supervisor, and online from the Matlab community. 
-
-The project has been developed using Matlab r2014a, although should be backwards-compatible with most recent releases. 
-
-\subsubsection{Java}
-As large parts of Matlab run in the \ac{JVM}, it is possible to use Java classes directly from within Matlab. This was taken advantage of in order to use threads, which is something that Matlab does not support out of the box. 
-
-Matlab r2014a runs under the Java JVM version 1.7 - as such, any development must be done using the Java 7 JDK or below. 
-
-\subsubsection{C/C++}
-C/C++ functions can be exported to the Matlab environment through the use of MEX-files. The OpenNI wrapper used to interact with the Xtion camera was written using C++ and MEX, and required some modifications.
-
-Additionally, a C++ based Video Segmentation~\cite{videosegment} tool written by Google and Georgia Tech was trialled, and was also slightly modified.
+\subsection{Summary of disadvantages of existing solutions}
